[FIX] description seo trop longue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -132,7 +132,7 @@ function ensureTrailing(href: string) {
   }
 </style>
 
-<Layout title="In the Pouchett - Studio d'enregistrement & Live Sessions" description="In the Pouchett: studio d'enregistrement à Paris spécialisé dans les Live Sessions. Captation audio/vidéo, mixage et mastering, accompagnement artistique, contactez nous !" canonical="/">
+<Layout title="In the Pouchett - Studio d'enregistrement & Live Sessions" description="Studio d'enregistrement à Paris spécialisé dans les Live Sessions. Captation audio/vidéo, mixage et mastering, accompagnement artistique, contactez nous !" canonical="/">
   <Navbar slot="navbar" />
 
   <div class="hero cover-image">
