--- a/src/pages/mentions-legales.astro
+++ b/src/pages/mentions-legales.astro
@@ -32,6 +32,10 @@ import Layout from "../layouts/Layout.astro";
       padding-bottom: 0.5rem;
       margin-top: 2rem;
       margin-bottom: 1rem;
+      text-transform: none !important;
+      text-align: left !important;
+      letter-spacing: normal !important;
+      font-weight: 700 !important;
 
       &:first-of-type {
         margin-top: 0;
