--- a/src/pages/qui-sommes-nous.astro
+++ b/src/pages/qui-sommes-nous.astro
@@ -19,6 +19,10 @@ import Louis from "../assets/louis_jaumaux.jpg";
       flex: 1;
       /* text-align: justify; */
     }
+    /* Arrondir les coins des images */
+    & > picture img {
+      border-radius: 8px;
+    }
   }
 
   .pattern > .people > p {
