update alternate names pour images de la page, improve SEO

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -541,7 +541,7 @@ function ensureTrailing(href: string) {
           <div class="studio-item tall">
             <Picture 
               src={studioLargePortrait} 
-              alt="Vue du studio portrait" 
+              alt="Vue du studio portrait, couleurs chaud, ambiance cosy. Végétalisé avec beaucoup de plantes, tapis et décorations." 
               widths={[400, 800]} 
               sizes="(max-width: 768px) 100vw, 33vw"
             />
@@ -550,7 +550,7 @@ function ensureTrailing(href: string) {
           <div class="studio-item tall wide">
             <Picture 
               src={pianoClose} 
-              alt="Piano acoustique" 
+              alt="Piano acoustique ouvert, on voit les cordes et les marteaux. Cadre doré. Marque Gunther." 
               widths={[600, 1200]} 
               sizes="(max-width: 768px) 100vw, 66vw"
             />
@@ -559,7 +559,7 @@ function ensureTrailing(href: string) {
           <div class="studio-item">
             <Picture 
               src={fader} 
-              alt="Fader" 
+              alt="Fader, control de monitoring. Outil de mixage son." 
               widths={[300, 600]} 
               sizes="(max-width: 768px) 50vw, 33vw"
             />
@@ -568,7 +568,7 @@ function ensureTrailing(href: string) {
           <div class="studio-item">
             <Picture 
               src={piano1} 
-              alt="Piano droit" 
+              alt="Piano droit, vu large, bois foncé, ouvert sur les cordes et la mécanique des marteaux" 
               widths={[300, 600]} 
               sizes="(max-width: 768px) 50vw, 33vw"
             />
@@ -578,7 +578,7 @@ function ensureTrailing(href: string) {
           <div class="studio-item tall">  
             <Picture 
               src={oc818} 
-              alt="Austrian Audio OC818" 
+              alt="Austrian Audio OC818, micro à condensateur, vue de face. Multidirectionnel. (Cardioïde, Omnidirectionnel, Figure en 8). Capacité d'enregistrer en stéréo. Idéal pour la voix, les overheads, les guitares acoustiques." 
               widths={[400, 800]} 
               sizes="(max-width: 768px) 50vw, 33vw"
             />
@@ -587,7 +587,7 @@ function ensureTrailing(href: string) {
           <div class="studio-item tall wide">
             <Picture 
               src={flamandCache} 
-              alt="Flamand Rose" 
+              alt="Flamand Rose, emblème du studio. On voit ici une statuette en bois peint." 
               widths={[600, 1200]} 
               sizes="(max-width: 768px) 100vw, 66vw"
               style="object-position: 50% 30%;"
@@ -597,7 +597,7 @@ function ensureTrailing(href: string) {
           <div class="studio-item">
             <Picture 
               src={d190Mic} 
-              alt="AKG D190C" 
+              alt="AKG D190C, aussi appelé Micro du Pape car utilisé par de nombreux Papes depuis les années 70. Micro dynamique vintage, idéal pour les voix, les percussions, guitares électriques et instruments à vent." 
               widths={[300, 600]} 
               sizes="(max-width: 768px) 50vw, 33vw"
               style="object-position: 50% 10%;"
@@ -607,7 +607,7 @@ function ensureTrailing(href: string) {
           <div class="studio-item tall">
             <Picture 
               src={soyuz013} 
-              alt="Soyuz 013 fet" 
+              alt="Soyuz 013 fet, deux micros a petit diaphragme, fonctionne avec tout ce qu'on met devant. Son rond, profond, doux dans les aigus, et un look premium qui en jette." 
               widths={[400, 800]} 
               sizes="(max-width: 768px) 50vw, 33vw"
             />
@@ -616,27 +616,27 @@ function ensureTrailing(href: string) {
           <div class="studio-item wide">
             <Picture 
               src={machinePatchbay} 
-              alt="Control Room" 
+              alt="La control room du studio, avec le patchbay, les machines, les préamplis Focusrite ISA Two et Audient ASP800/880. On voit aussi le RME Fireface UFX III. L'espace de mixage et mastering également. Sert également de cabine de voix si besoin" 
               widths={[600, 1200]} 
               sizes="(max-width: 768px) 100vw, 66vw"
             />
-            <div class="caption">Control Room</div>
+            <div class="caption">Patch bay</div>
           </div>
           
           <div class="studio-item tall">
             <Picture 
               src={closeMicGreen} 
-              alt="Prise de son" 
+              alt="Prise de voix, on y voit le micro OC818 et un pop filter, le fond du studio avec plantes et lumière verte. L'éclairage est également inclu dans les prestations de captations vidéo lors des live sessions" 
               widths={[400, 800]} 
               sizes="(max-width: 768px) 50vw, 33vw"
             />
-            <div class="caption">Prise de son</div>
+            <div class="caption">Prise de voix</div>
           </div>
           
           <div class="studio-item">
             <Picture 
               src={bureauLarge} 
-              alt="Bureau Studio" 
+              alt="Control Room du studio, avec le bureau, les machines, les enceintes Kali IN8, le macbook, le streamdeck. LA control room peut également servir de cabine de voix si besoin." 
               widths={[300, 600]} 
               sizes="(max-width: 768px) 50vw, 33vw"
             />
@@ -720,20 +720,20 @@ function ensureTrailing(href: string) {
       <div class="materiel-images instrument-carousel">
         <Picture 
           src={hardwareCloseBlur} 
-          alt="Studio Hardware" 
+          alt="Studio Hardware, préamplis et convertisseurs, ampli casques, TRINNOV NOVA" 
           widths={[400, 800]} 
           sizes="(max-width: 768px) 100vw, 33vw"
         />
         <Picture 
           src={soyuz013Close} 
-          alt="Micros Soyuz" 
+          alt="Micros Soyuz 013 FET petit diaphragme, vue rapprochée" 
           widths={[400, 800]} 
           sizes="(max-width: 768px) 100vw, 33vw"
           style="object-position: 50% 25%;"
         />
         <Picture 
           src={fader} 
-          alt="Amplis Orange" 
+          alt="Faderport V2" 
           widths={[400, 800]} 
           sizes="(max-width: 768px) 100vw, 33vw"
         />
@@ -811,7 +811,7 @@ function ensureTrailing(href: string) {
         />
         <Picture 
           src={deepmindClose} 
-          alt="Synthé deepmind" 
+          alt="Synthé deepmind, reproduction du mythique Juno-106" 
           widths={[400, 800]} 
           sizes="(max-width: 768px) 100vw, 33vw"
           style="object-position: 50% 90%;"
