modif caption image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -640,7 +640,7 @@ function ensureTrailing(href: string) {
               widths={[300, 600]} 
               sizes="(max-width: 768px) 50vw, 33vw"
             />
-            <div class="caption">Bureau Studio</div>
+            <div class="caption">Control Room</div>
           </div>
           
         </div>
